[package]
name = "lazaretto"
version = "0.1.0"
authors = ["Charlton Rodda <charlton.rodda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_quicksilver_renderer = { path = "./iced-quicksilver-renderer" }
env_logger = "0.7"
quicksilver = { git = "https://github.com/SafariMonkey/quicksilver", branch = "version-0.3-wasm-bindgen-support" }

# iced_native = "0.2.0"
[dependencies.iced_native]
version = "0.2.0"
git = "https://github.com/SafariMonkey/iced"
branch = "fix-event-stream-on-web"

[workspace]
members = [
    "iced-quicksilver-renderer",
    "algorithm",
]
